client/src/app/tools/components/shell/shell.component.css
nav {
  z-index: 9999;
}

.container {
  min-height: calc(100vh - 108px);
  height: 100%;
  background: #f7f7f7;
  margin-top: 60px;
  padding: 30px 0;
}

.container-printing {
  background: #f7f7f7;
  margin-top: 0;
  height: 100vh;
}

.header-bg {
  background-color: #0371B3;
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
}

.show-lg {
  padding: 0px;
}

footer {
  text-align: center;
  background: #0A4F7F;
  padding: 0.6rem 0;
}

footer p {
  color: #fff;
  margin: 0;
}

footer a {
  color: #229AD2;
}

main.columns {
  width: 100%;
}

